# road-to-edo

./: .gitignore  Cargo.toml
assets/maps/: simple_island.tmx
conf/: settings.toml
src/: game.rs  main.rs  render.rs
src/shaders/: shader.frag  shader.vert
