[package]
name = "road-to-edo"
version = "0.1.0"
authors = ["Axel Magnuson <axelmagn@gmail.com>"]

[dependencies.glium]
version = "0.10"
features = ["image", "nalgebra"]

[dependencies.tiled]
git = "https://github.com/axelmagn/rs-tiled.git"

[dependencies]
glutin = "0.4"
toml = "0.1"
image = "0.3"
nalgebra = "0.3"
